# vision_msgs

./: .gitignore  CMakeLists.txt  Makefile  manifest.xml  package.xml
msg/: BoundingBox.msg  BoundingBoxStamped.msg  Detection.msg  DetectionStamped.msg  Feature.msg  Features.msg  Features3D.msg  KeyPoint.msg  Mask.msg  Mat.msg  ObjectDescription.msg  Point2D.msg  StereoFeatures.msg  TrainingData.msg
srv/: TrainDetector.srv
